Tue May 17 06:42:53 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/logger.rb:  Improve documentation.  Patch by David Copeland.
	  [Ruby 1.9 - Bug #4706]

Tue May 17 06:28:14 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/gserver.rb:  Improve documentation.  Patch by David Copeland.
	  [Ruby 1.9 - Bug #4705]

Tue May 17 06:21:15 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/cgi.rb: Add toplevel documentation to class CGI
	* lib/cgi/session.rb: Add overview documentation to CGI::Cookie
	* lib/cgi/html.rb:  Don't add CGI::TagMaker documentation to CGI.
	  Patch by David Copeland.  [Ruby 1.9 - Bug #4704]
	* lib/cgi/core.rb:  Clean up CGI documentation.  Patch by David
	  Copeland.  [Ruby 1.9 - Bug #4704]
	* lib/cgi/cookie.rb:  Clean up CGI::Cookie documentation.  Patch by
	  David Copeland.  [Ruby 1.9 - Bug #4704]

Tue May 17 05:52:30 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/digest: Improve documentation of Digest, Digest::HMAC and
	  Digest::SHA2.  Patch by Pete Higgins.  [Ruby 1.9 - Bug #4702]

Tue May 17 03:51:42 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/abbrev.rb:  Hide copyright and revision information from RDoc.
	  Inspired by patch from David Copeland, bug #4703.

Tue May 17 03:33:21 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/timeout.rb (module Timeout):  Hide internal constants.  Patch by
	  Pete Higgins.  [Ruby 1.9 - Bug #4701]

Mon May 16 11:21:09 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* configure.in, win32/Makefile.sub (RUBY_SO_NAME): add CPU as prefix
	  of RUBY_SO_NAME on x64/ia64 mswin/mingw.
	  [Feature #4602]

Mon May 16 08:00:05 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc.rb:  Update to RDoc 3.6.1, allows OpenSSL::Digest to be
	  found.

Mon May 16 05:49:54 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/drb/acl.rb:  Add documentation.

Mon May 16 05:13:20 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c: Add documentation.
