@@ -1,3 +1,8 @@
+Tue May 17 06:50:40 2011  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/observer.rb:  Improve documentation.  Patch by David Copeland.
+	  [Ruby 1.9 - Bug #4707]
+
 Tue May 17 06:42:53 2011  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/logger.rb:  Improve documentation.  Patch by David Copeland.
